# mgi-mira-pipelines

./: .gitignore  CLAUDE.md  config.yaml  pyproject.toml
lib/: downloader.py  utils.py  utils.py.bak
models/bd/: cep.sql
models/cgu/: nfe_eventos.sql  nfe_itens.sql  nfe_notas.sql
models/cgu/raw/: nfe_eventos.sql  nfe_itens.sql  nfe_notas.sql
models/mgi/: _mip__cnpj_governo.sql  _ncm_cfops.sql  cnpjs_uniao.sql  compras_uniao.sql  notas_fiscais.sql
models/old_rfb/raw/: __cnpj__naturezajuridica.sql  _cnpj__cfop.sql  _cnpj__dicionario.sql  _cnpj__estabelecimentos.sql
models/rfb/: _cnpj__empresas.sql  _cnpj__estabelecimentos.sql  cfop.sql  cnpj__empresas.sql  cnpj__estabelecimentos.sql  ncm.sql
models/rfb/raw/: cnpj__cnaes.py  cnpj__empresas.py  cnpj__estabelecimentos.py  cnpj__motivos.py  cnpj__municipios.py  cnpj__naturezas.py  cnpj__paises.py
nbs/: Untitled.ipynb  compras_governo_mgi.ipynb  compras_governo_nfe.ipynb  compras_tic.ipynb  compras_tic_ExecutivoFederal.ipynb  encoding.ipynb  nfe.ipynb  rfb_cnpj.ipynb
