[project]
name = "pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "nbdev>=2.4.5",
    "pandas>=2.3.1",
    "quarto>=0.1.0",
    "tqdm>=4.67.1",
]
