[project]
name = "pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb-engine>=0.17.0",
    "duckdb>=1.3.2",
    "ipython-sql>=0.5.0",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "jupysql>=0.10.14",
    "jupyter>=1.1.1",
    "nbdev>=2.4.5",
    "pandas>=2.3.1",
    "prettytable<3.10",
    "quarto>=0.1.0",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
]
